add sso signout feature

--- a/Src/Sample/Sample.CommandService/Views/Test/Index.cshtml
+++ b/Src/Sample/Sample.CommandService/Views/Test/Index.cshtml
@@ -112,6 +112,7 @@
     </script>
 </head>
 <body>
+    <a href="@Url.Action("SignOut")">logoff</a>
     <input type="button" value="RefreshCommandDistributorStatus" id="btnRefreshCommandDistributorStatus" />
     @(Guid.NewGuid().ToString().GetUniqueCode())
     <div id="commandDistributorStatus">
