--- a/Src/iFramework.Plugins/IFramework.Sample.AuthWeb/Views/Account/Login.cshtml
+++ b/Src/iFramework.Plugins/IFramework.Sample.AuthWeb/Views/Account/Login.cshtml
@@ -5,6 +5,16 @@
 }
 
 <h2>@ViewBag.Title.</h2>
+@{
+    var addressesExpected = ViewData["AddressesExpected"] as string[];
+    if (addressesExpected != null)
+    {
+        foreach (var address in addressesExpected)
+        {
+            <img src="@(address)?wa=wsignoutcleanup1.0" style="display:none;" />
+        }
+    }
+}
 <div class="row">
     <div class="col-md-8">
         <section id="loginForm">
