--- a/Src/Sample/Sample.CommandServiceCore/Views/Shared/_Layout.cshtml
+++ b/Src/Sample/Sample.CommandServiceCore/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Sample.CommandServiceCore</a>
+                <a asp-area="" asp-controller="Home" asp-action="Test" class="navbar-brand">Sample.CommandServiceCore Test</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
