--- a/Src/Sample/Sample.CommandServiceCore/Views/Home/Test.cshtml
+++ b/Src/Sample/Sample.CommandServiceCore/Views/Home/Test.cshtml
@@ -17,10 +17,10 @@
         var doSaga = function(commandName, command) {
             $.ajax({
                 cache: false,
-                //contentType: "application/command+form;command=" + commandName,
+                contentType: "application/json",
                 type: "POST",
                 url: '@Url.Content("~/api/SagaApi/")' + commandName + '?t=' + new Date().getTime().toString(),
-                data: command,
+                data: JSON.stringify(command),
                 success: function(data) {
                     if (data.errorCode == 0) {
                         showResult(JSON.stringify(data));
