--- a/Src/Sample/Sample.CommandServiceCore/Views/Home/Test.cshtml
+++ b/Src/Sample/Sample.CommandServiceCore/Views/Home/Test.cshtml
@@ -183,6 +183,7 @@
     </script>
 </head>
 <body>
+    <mini-profiler />
     <a href="@Url.Action("SignOut")">logoff</a>
     <input type="button" value="RefreshCommandDistributorStatus" id="btnRefreshCommandDistributorStatus" />
     @(Guid.NewGuid().ToString().GetUniqueCode())
