--- a/Src/Sample/Sample.CommandServiceCore/Views/Shared/_Layout.cshtml
+++ b/Src/Sample/Sample.CommandServiceCore/Views/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
     </environment>
 </head>
 <body>
+    <mini-profiler />
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
