--- a/Src/Sample/Sample.CommandServiceCore/Views/_ViewImports.cshtml
+++ b/Src/Sample/Sample.CommandServiceCore/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 @using Sample.CommandServiceCore
 @using Sample.CommandServiceCore.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using StackExchange.Profiling
+@addTagHelper *, MiniProfiler.AspNetCore.Mvc
