--- a/Src/Sample/Sample.CommandServiceCore/Views/Shared/Error.cshtml
+++ b/Src/Sample/Sample.CommandServiceCore/Views/Shared/Error.cshtml
@@ -6,12 +6,14 @@
 <h1 class="text-danger">Error.</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
 
-@if (Model.ShowRequestId)
-{
-    <p>
-        <strong>Request ID:</strong> <code>@Model.RequestId</code>
-    </p>
-}
+
+
+<p>
+    <strong>Request ID:</strong> <code>@Model.RequestId</code>
+    <p>@Model.Exception?.Message</p>
+    <p>@Model.Exception?.StackTrace</p>
+</p>
+
 
 <h3>Development Mode</h3>
 <p>
