remove mailbox while mailbox is empty

--- a/Src/Sample/Sample.CommandServiceCore/Views/Home/Test.cshtml
+++ b/Src/Sample/Sample.CommandServiceCore/Views/Home/Test.cshtml
@@ -228,6 +228,7 @@
         <input id="btnReduceProduct" type="button" value="ReduceProduct" />
         <input id="btnMailboxProcess" type="button" value="MailboxProcess" />
         MailboxValue:<span>@ViewBag.MailboxValue</span>
+        MailboxStatus:<span>@ViewBag.MailboxStatus</span>
 
     </div>
     @using (Html.BeginForm("PostAddRequest", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
