add TrySetException after exception  occured in  mailbox processing

--- a/Src/Sample/Sample.CommandServiceCore/Views/Home/Test.cshtml
+++ b/Src/Sample/Sample.CommandServiceCore/Views/Home/Test.cshtml
@@ -72,8 +72,9 @@
 
             $("#btnMailboxProcess").click(function () {
                 var batchCount = parseInt($("#batchCount").val());
+                var id = $("#Id").val();
                 for (var i = 0; i < batchCount; i++) {
-                    $.post("@Url.Content("~/home/MailboxTest")", {id: 1, number:1}, function (result) {
+                    $.post("@Url.Content("~/home/MailboxTest")", {id: id, number:1}, function (result) {
                         showResult(JSON.stringify(result));
                     })
                 }
