--- a/Src/Sample/Sample.CommandServiceCore/Views/_ViewImports.cshtml
+++ b/Src/Sample/Sample.CommandServiceCore/Views/_ViewImports.cshtml
@@ -2,4 +2,4 @@
 @using Sample.CommandServiceCore.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using StackExchange.Profiling
-@addTagHelper *, MiniProfiler.AspNetCore.Mvc
+@*@addTagHelper *, MiniProfiler.AspNetCore.Mvc*@
