--- a/Src/iFramework.Plugins/IFramework.KafkaTools/Views/Home/Index.cshtml
+++ b/Src/iFramework.Plugins/IFramework.KafkaTools/Views/Home/Index.cshtml
@@ -1,7 +1,8 @@
-﻿@{
+﻿@using Microsoft.Extensions.Configuration
+@{
     ViewData["Title"] = "Home Page";
 }
-
+<div>@this.Context.RequestServices.GetService(typeof(IConfiguration)).ToString()</div>
 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
