--- a/Src/Sample/Sample.CommandServiceCore/Views/Home/Test.cshtml
+++ b/Src/Sample/Sample.CommandServiceCore/Views/Home/Test.cshtml
@@ -158,7 +158,7 @@
                 var username = $("#username").val();
                 var password = $("#password").val();
                 var registerCommand = {
-                    UserName: username, Password: password, Email: "ivan@r-soft.cn", Tags: [{ Id: "id1", Name: "Name1" }, { Id: "id2", Name: "Name2"}] };
+                    UserName: username, Password: password, Email: "ivan@r-soft.cn", TagCollection: [{ Id: "id1", Name: "Name1" }, { Id: "id2", Name: "Name2"}] };
                 doCommand("Register", registerCommand);
             });
 
