--- a/Src/Sample/Sample.CommandServiceCore/Views/Home/Test.cshtml
+++ b/Src/Sample/Sample.CommandServiceCore/Views/Home/Test.cshtml
@@ -11,6 +11,15 @@
     <title>Test</title>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script>
+        String.format = function () {
+            var str = arguments[0];
+            for (var i = 0; i < arguments.length - 1; i++) {
+                var reg = new RegExp("\\{" + i + "\\}", "gm");
+                str = str.replace(reg, arguments[i + 1]);
+            }
+            return str;
+        }
+        
         var showResult = function(result) {
             $("#result").prepend(result + "<br>");
         }
@@ -207,7 +216,24 @@
                     $("#commandDistributorStatus").html(result);
                 });
         };
-
+        var lastOffset = -1;
+        setInterval(function() {
+            var topic = $("#topic").val();
+            var group = $("#group").val();
+            $.get("@Url.Content("~/Home/ConsumerOffsets")" + String.format("?group={0}&topic={1}", group, topic),
+                null,
+                function(result) {
+                    if (lastOffset >= 0) {
+                        var processedTps = (result.offset - lastOffset) / 5;
+                        if (result.offset < 0) {
+                            processedTps = 0;
+                        }
+                        var status = String.format("topic:{0} group:{1} lag: {2} tps: {3}", topic, group, result.totalLag, processedTps);
+                        $("#consumerTps").text(status);
+                    }
+                    lastOffset = result.offset;
+                });
+        }, 5000);
     </script>
 </head>
 <body>
@@ -215,9 +241,15 @@
     <a href="@Url.Action("SignOut")">logoff</a>
     <input type="button" value="RefreshCommandDistributorStatus" id="btnRefreshCommandDistributorStatus" />
     @(Guid.NewGuid().ToString().GetUniqueCode())
-    <div id="commandDistributorStatus">
-
-    </div>
+<div id="commandDistributorStatus">
+    
+</div>
+<div>
+    <label>topic:</label><input type="text" id="topic" placeholder="topic" value="IVAN-PC.uat.commandqueue" />
+    <label>group:</label><input type="text" id="group" placeholder="group" value="IVAN-PC.uat.commandqueue.consumer"/>
+    <div id="consumerTps"></div>
+</div>
+   
     <br />
     <input type="button" value="CloseMessageQueue" id="closeMqBtn" />
     <input type="text" value="10" id="batchCount" />
